# TheRobotLibrary

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Handoff_chat.md  README.md  docker.sh  handover_chat.md  opencode.json  sandbox.sh
workspace/: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  architecture.md
workspace/cmake/: deps.cmake
workspace/frontends/: CMakeLists.txt  README.md
workspace/frontends/native/: CMakeLists.txt  README.md
workspace/frontends/web/: README.md
workspace/robotics/: CMakeLists.txt  README.md
workspace/robotics/common/: CMakeLists.txt  README.md
workspace/robotics/common/docs/: theory.md
workspace/robotics/common/include/common/: geometry.hpp  laser_scan.hpp  occupancy_grid.hpp  transform2d.hpp  types.hpp  types_3d.hpp
workspace/robotics/common/logging/: CMakeLists.txt  README.md
workspace/robotics/common/logging/docs/: theory.md
workspace/robotics/common/logging/src/: get_logger.cpp  spdlog_logger.cpp
workspace/robotics/common/noise_models/: CMakeLists.txt  README.md
workspace/robotics/common/noise_models/docs/: theory.md
workspace/robotics/common/src/kinematics/: ackermann.cpp  differential_drive.cpp  swerve_drive.cpp  unicycle.cpp
workspace/robotics/common/testing/: CMakeLists.txt
workspace/robotics/common/tests/: CMakeLists.txt  test_ackermann.cpp  test_differential_drive.cpp  test_geometry.cpp  test_swerve_drive.cpp  test_transform2d.cpp  test_types.cpp  test_unicycle.cpp
workspace/robotics/common/transforms/: CMakeLists.txt  README.md
workspace/robotics/common/transforms/docs/: theory.md
workspace/robotics/common/transforms/tests/: CMakeLists.txt  transforms_tests.cpp
workspace/robotics/control/: CMakeLists.txt  README.md
workspace/robotics/control/adaptive/: CMakeLists.txt  README.md
workspace/robotics/control/adaptive/gain_scheduling/: CMakeLists.txt  README.md
workspace/robotics/control/adaptive/rls/: CMakeLists.txt  README.md
workspace/robotics/control/cbf/: CMakeLists.txt  README.md
workspace/robotics/control/docs/: theory.md
workspace/robotics/control/feedback_linearization/: CMakeLists.txt  README.md
workspace/robotics/control/frenet/: CMakeLists.txt  README.md
workspace/robotics/control/lqg/: CMakeLists.txt  README.md
workspace/robotics/control/lqr/: CMakeLists.txt  README.md
workspace/robotics/control/mpc/: CMakeLists.txt  README.md
workspace/robotics/control/mppi/: CMakeLists.txt  README.md
workspace/robotics/control/pid/: CMakeLists.txt  README.md
workspace/robotics/control/pure_pursuit/: CMakeLists.txt  README.md
workspace/robotics/control/stanley/: CMakeLists.txt  README.md
workspace/robotics/fleet_management/: CMakeLists.txt  README.md
workspace/robotics/fleet_management/battery_management/: CMakeLists.txt  README.md
workspace/robotics/fleet_management/charging_station/: CMakeLists.txt  README.md
workspace/robotics/fleet_management/docs/: theory.md
workspace/robotics/fleet_management/fleet_monitor/: CMakeLists.txt  README.md
workspace/robotics/fleet_management/task_allocation/: CMakeLists.txt  README.md
workspace/robotics/fleet_management/vda5050/: CMakeLists.txt  README.md
workspace/robotics/motion_planning/: CMakeLists.txt  README.md
workspace/robotics/motion_planning/docs/: theory.md
workspace/robotics/motion_planning/global_planning/: CMakeLists.txt  README.md
workspace/robotics/motion_planning/local_planning/: CMakeLists.txt  README.md
workspace/robotics/motion_planning/multi_robot/: CMakeLists.txt  README.md
workspace/robotics/motion_planning/trajectory_planning/: CMakeLists.txt  README.md
workspace/robotics/perception/: CMakeLists.txt  README.md
workspace/robotics/perception/depth_camera/: CMakeLists.txt  README.md
workspace/robotics/perception/docs/: theory.md
workspace/robotics/perception/feature_extraction/: CMakeLists.txt  README.md
workspace/robotics/perception/imu_processing/: CMakeLists.txt  README.md
workspace/robotics/perception/lane_detection/: CMakeLists.txt  README.md
workspace/robotics/perception/lidar_processing/: CMakeLists.txt  README.md
workspace/robotics/perception/object_detection_3d/: CMakeLists.txt  README.md
workspace/robotics/perception/obstacle_detection/: CMakeLists.txt  README.md
workspace/robotics/perception/occupancy_grid/: CMakeLists.txt  README.md
workspace/robotics/perception/place_recognition/: CMakeLists.txt  README.md
workspace/robotics/perception/ray_casting/: CMakeLists.txt  README.md
workspace/robotics/perception/semantic_segmentation/: CMakeLists.txt  README.md
workspace/robotics/perception/stereo_depth/: CMakeLists.txt  README.md
workspace/robotics/perception/visual_odometry/: CMakeLists.txt  README.md
workspace/robotics/state_estimation/: CMakeLists.txt  README.md
workspace/robotics/state_estimation/docs/: theory.md
workspace/robotics/state_estimation/ekf/: CMakeLists.txt  README.md
workspace/robotics/state_estimation/ekf_slam/: CMakeLists.txt  README.md
workspace/robotics/state_estimation/factor_graph/: CMakeLists.txt  README.md
workspace/robotics/state_estimation/lidar_slam/: CMakeLists.txt  README.md
workspace/robotics/state_estimation/particle_filter/: CMakeLists.txt  README.md
workspace/robotics/state_estimation/pose_graph/: CMakeLists.txt  README.md
workspace/robotics/state_estimation/ukf/: CMakeLists.txt  README.md
workspace/robotics/state_estimation/visual_inertial_odometry/: CMakeLists.txt  README.md
workspace/robotics/state_estimation/visual_slam/: CMakeLists.txt  README.md
workspace/simulation/: CMakeLists.txt  README.md
workspace/simulation/scenarios/: dynamic_obstacles.xml  flat_ground.xml  l_shaped_room.xml  maze.xml  open_room.xml
workspace/simulation/src/: main.cpp
workspace/simulation/src/app/: app_shell.cpp
workspace/simulation/src/bridge/: actuator_adapter.cpp  model_adapter.cpp  sensor_adapter.cpp  state_adapter.cpp
workspace/simulation/src/pipeline/: module_pipeline.cpp
workspace/simulation/tests/: CMakeLists.txt  test_headless.cpp  test_integration.cpp  test_m3_integration.cpp  test_m4_integration.cpp
(+288 files in other folders)
