# perception domain aggregator
add_subdirectory(lidar_processing)
add_subdirectory(occupancy_grid)
add_subdirectory(ray_casting)
add_subdirectory(obstacle_detection)
add_subdirectory(feature_extraction)
add_subdirectory(visual_odometry)
add_subdirectory(imu_processing)
add_subdirectory(place_recognition)
add_subdirectory(stereo_depth)
add_subdirectory(depth_camera)
add_subdirectory(object_detection_3d)
add_subdirectory(lane_detection)
add_subdirectory(semantic_segmentation)
